# Rift-Network

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  fix_unregister_mint.patch
.github/workflows/: fuzz.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
programs/rift_token/: Cargo.toml
programs/rift_token/src/: lib.rs
programs/ultra_core_rift/: Cargo.toml
programs/ultra_core_rift/src/: lib.rs
programs/ultra_core_rift/tests/: core_invariants.rs  property_core_state.rs
